--- a/assets/global.css
+++ b/assets/global.css
@@ -1,4 +1,52 @@
+:root{
+    --color0: #CAF0F8;
+    --color1: #90E0EF;
+    --color2: #00B4D8;
+    --color3: #0077B6;
+    --color4: #03045E;
+}
 *{
-    padding: 0px;
     margin: 0px;
+}
+.main-login{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--color4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.left-login{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.left-login > h1{
+    color: var(--color1)
+}
+.right-login{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card-login{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #0077B6;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.79);
+}
+.card-title > h1{
+    color: #00B4D8;
+    font-weight: 800;
+    margin: 0;
 }
