--- a/assets/global.css
+++ b/assets/global.css
@@ -7,46 +7,38 @@
 }
 *{
     margin: 0px;
+    padding: 0px;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to right,rgb(53, 173, 242),rgb(17,54,71));
 }
 .main-login{
-    width: 100vw;
-    height: 100vh;
+    height: 40vh;
+    width: 40vh;
+    color: white;
     background-color: var(--color4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 2vh;
 }
-.left-login{
-    width: 50vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+#title-login{
+    margin-top: 2vh;
+    margin-left: 2vh;
 }
-.left-login > h1{
-    color: var(--color1)
+#question{
+    color: white;
+    text-align: center;
 }
-.right-login{
-    width: 50vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.card-login{
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 30px 35px;
-    background: #0077B6;
-    border-radius: 20px;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.79);
-}
-.card-title > h1{
-    color: #00B4D8;
-    font-weight: 800;
-    margin: 0;
+.input-login{
+    text-align: center;
+    background-color: var();
+    width: 50%;
+    margin: auto;
+    display: block;
+    height: 5vh;
+    border-radius: vh;
+    border-radius: 1vh;
 }
