--- a/assets/global.css
+++ b/assets/global.css
@@ -11,7 +11,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right,rgb(53, 173, 242),rgb(17,54,71));
+    background-image: linear-gradient(to right,rgb(53, 173, 242),rgb(22, 17, 71));
 }
 .main-login{
     height: 40vh;
@@ -41,4 +41,10 @@ body{
     height: 5vh;
     border-radius: vh;
     border-radius: 1vh;
+}
+.box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
