--- a/assets/global.css
+++ b/assets/global.css
@@ -1,50 +1,41 @@
-:root{
-    --color0: #CAF0F8;
-    --color1: #90E0EF;
-    --color2: #00B4D8;
-    --color3: #0077B6;
-    --color4: #03045E;
+*{margin: 0px; padding: 0px; font-size: 100%; box-sizing: border-box; font-family: 'Open sans' sans-serif;}
+nav, ul{list-style: none;}
+a{text-decoration: none; cursor: pointer; opacity: 0.9;}
+a:hover{opacity: 1;}
+
+/* Header */
+
+header{width: 100%; position: absolute; top: 0px; left: 0px; display: flex; justify-content: space-between;
+    align-items: center; padding: 20px 50px; background-color: #fff;}
+header img{width: 10vh;}
+header nav{display: flex;}
+header li a{color: rgb(4, 4, 54);}
+header li{margin: 0px 15px;}
+header li:first-child{margin-left: 0px;}
+header li:last-child{margin-right: 0px;}
+@media(max-width: 700px){
+    header{flex-direction: column;}
+    header img{margin-bottom: 15px;}
 }
-*{
-    margin: 0px;
-    padding: 0px;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right,rgb(53, 173, 242),rgb(22, 17, 71));
-}
-.main-login{
-    height: 40vh;
-    width: 40vh;
-    color: white;
-    background-color: var(--color4);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 2vh;
-}
-#title-login{
-    margin-top: 2vh;
-    margin-left: 2vh;
-}
-#question{
-    color: white;
-    text-align: center;
-}
-.input-login{
-    text-align: center;
-    background-color: var();
-    width: 50%;
-    margin: auto;
-    display: block;
-    height: 5vh;
-    border-radius: vh;
-    border-radius: 1vh;
-}
-.box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+
+/* Hero */
+.hero{ min-height: 50vh; background-color: aqua; display: flex;
+justify-content: center; align-items: center; flex-direction: column; text-align: center; background-position: center center;}
+.hero .search-position{width: 220px; height: 20px; display: flex;position: absolute;}
+.hero .search-position input{outline: none;border: none; display: absolute; height: 4vh}
+.hero .search-position button {background: none; border: none;background-color: #fff; height: 4vh; cursor: pointer;}
+
+/* Cursos */
+.cursos{display: flex;flex-direction: column;align-items: center;}
+.cursos h3{font-size: 2rem; margin-bottom: 35px; color: rgb(4, 4, 54); text-align: center;}
+.cursos hr{width: 200px; height: 2px; background-color: rgb(4, 4, 54); margin-bottom: 70px; border: none;}
+
+.cursos .grid{width: 100%; display: flex; flex-wrap: wrap; background-image: url(../img/cursos/madeira-empe.jpg);}
+.cursos .grid li{height: 350px; padding: 1px; border-radius: 4px; background-clip: content-box; background-size: cover; background-position: center;}
+.cursos .grid li.div2{flex-basis: 50%; border: #fff 50px solid;}
+.cursos .grid li.large{flex-basis: 100%;}
+.cursos .grid li.div1{flex-basis: 50%; border: #fff 1px solid;}
+@media(max-width: 700px){
+    .cursos .grid li.small,.cursos .grid li.large{flex-basis: 100%;}
+    .hero h3{font-size: 1.5rem;}
 }
