--- a/assets/inicio.css
+++ b/assets/inicio.css
@@ -1,15 +1,29 @@
+
 *{margin: 0px; padding: 0px; font-size: 100%;box-sizing: border-box; font-family: 'Open Sans' sans-serif;}
 nav,ul{list-style: none;}
 a{text-decoration: none; cursor: pointer; opacity: 0.9;}
 a:hover{opacity: 1;}
 
+:root{
+    --color1: #0B090A;
+    --color2: #161A1D;
+    --color3: #660708;
+    --color4: #A4161A;
+    --color5: #BA181B;
+    --color6: #E5383B;
+    --color7: #B1A7A6;
+    --color8: #D3D3D3;
+    --color9: #F5F3F4;
+    --color10: #FFFFFF;
+}
+
 /* Header */
 
 header{width: 100%; position: absolute; top: 0px; left: 0px; display: flex; justify-content: space-between;
-    align-items: center; padding: 20px 50px; background-color: #fff;}
+    align-items: center; padding: 20px 50px; background-color: var(--color10);}
 header img{width: 10vh;}
 header nav{display: flex;}
-header li a{color: rgb(4, 4, 54);}
+header li a{color: var(--color5);}
 header li{margin: 0px 15px;}
 header li:first-child{margin-left: 0px;}
 header li:last-child{margin-right: 0px;}
@@ -20,11 +34,11 @@ header li:last-child{margin-right: 0px;}
 
 /*Hero*/
 
-.hero{background-image: url(../img/hero.jpg); background-size: cover; min-height: 100vh; color: #fff; display: flex;
+.hero{background-image: url(../img/hero.jpg); background-size: cover; min-height: 100vh; color: var(--color10); display: flex;
     justify-content: center; align-items: center; flex-direction: column; text-align: center; background-position: center center;}
 .hero h1{font-size: 3.2rem; margin-bottom: 15px;}
 .hero h3{font-size: 2rem; margin-bottom: 15px;}
-.hero .btn{background-color: #fff; border-radius: 4px; color: rgb(4, 4, 54 ); padding: 20px 50px; text-transform: uppercase;}
+.hero .btn{background-color: var(--color10); border-radius: 4px; color: var(--color2); padding: 20px 50px; text-transform: uppercase;}
 @media(max-width: 700px){
     .hero h1{font-size: 2.5rem;}
     .hero h3{font-size: 1.5rem;}
@@ -33,9 +47,9 @@ header li:last-child{margin-right: 0px;}
 /*Conheça a Escola*/
 
 .conheca-a-escola{display: flex;flex-direction: column;align-items: center;padding: 100px 50px;}
-.conheca-a-escola h3{font-size: 2rem; margin-bottom: 35px; color: rgb(4, 4, 54); text-align: center;}
-.conheca-a-escola p{max-width: 800px; margin-bottom: 35px; color: rgb(4, 4, 54); text-align: center;}
-.conheca-a-escola hr{width: 200px; height: 2px; background-color: rgb(4, 4, 54); margin-bottom: 70px; border: none;}
+.conheca-a-escola h3{font-size: 2rem; margin-bottom: 35px; color: var(--color2); text-align: center;}
+.conheca-a-escola p{max-width: 800px; margin-bottom: 35px; color: var(--color2); text-align: center;}
+.conheca-a-escola hr{width: 200px; height: 2px; background-color: var(--color2); margin-bottom: 70px; border: none;}
 
 .conheca-a-escola .grid{width: 100%; display: flex; flex-wrap: wrap;}
 .conheca-a-escola .grid li{height: 350px; padding: 20px; border-radius: 4px; background-clip: content-box; background-size: cover; background-position: center;}
@@ -47,15 +61,15 @@ header li:last-child{margin-right: 0px;}
 }
 
 /*Caracteristicas*/
-.caracteristicas{background-color: rgb(4, 4, 54); display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
-.caracteristicas h3{font-size: 2rem; margin-bottom: 35px; color: #fff; text-align: center;}
-.caracteristicas p{max-width: 800px;  margin-bottom: 35px; color: #fff;text-align: center;}
-.caracteristicas hr{width: 200px; height: 2px; background-color: #fff; margin-bottom: 70px; border: none;}
+.caracteristicas{background-color: var(--color2); display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
+.caracteristicas h3{font-size: 2rem; margin-bottom: 35px; color: var(--color10); text-align: center;}
+.caracteristicas p{max-width: 800px;  margin-bottom: 35px; color: var(--color10);text-align: center;}
+.caracteristicas hr{width: 200px; height: 2px; background-color: var(--color10); margin-bottom: 70px; border: none;}
 
 .caracteristicas .grid{width: 100%; display: flex;}
 .caracteristicas .grid li{padding: 0px 30px; text-align: center;}
-.caracteristicas .grid li i{height: 50px; width: 50px; color: rgb(28, 118, 208);font-size: 50px; margin-bottom: 30px;}
-.caracteristicas .grid li h4{font-size:  1.5rem; color: rgb(28, 118, 208); margin-bottom: 30px;}
+.caracteristicas .grid li i{height: 50px; width: 50px; color: var(--color5);font-size: 50px; margin-bottom: 30px;}
+.caracteristicas .grid li h4{font-size:  1.5rem; color: var(--color5); margin-bottom: 30px;}
 .caracteristicas .grid li p{color: #fff;}
 @media(max-width: 850px){
     .caracteristicas .grid{flex-direction: column;}
@@ -64,22 +78,23 @@ header li:last-child{margin-right: 0px;}
 /*NewsLetter*/
 
 .newsletter{display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
-.newsletter h3{font-size: 2rem; margin-bottom: 35px; color: rgb(28, 118, 208); text-align: center;}
-.newsletter p{max-width: 800px; margin-bottom: 35px; color: rgb(28, 118, 208); text-align: center;}
-.newsletter hr{width: 200px; height: 2px; background-color: rgb(28, 118, 208); margin-bottom: 70px; border: none;}
+.newsletter h3{font-size: 2rem; margin-bottom: 35px; color: var(--color5); text-align: center;}
+.newsletter p{max-width: 800px; margin-bottom: 35px; color: var(--color5); text-align: center;}
+.newsletter hr{width: 200px; height: 2px; background-color: var(--color5); margin-bottom: 70px; border: none;}
 
 .newsletter form{display: flex; align-items: center; justify-content: center; flex-wrap: wrap; width: 80%; max-width: 800px;}
-.newsletter input{padding: 15px; border: 1px solid rgb(28, 118, 208); border-radius: 4px; margin-right: 15px; flex: 1;}
-.newsletter button{padding: 15px; background-color: rgb(28, 118, 208);color: #fff; text-transform: uppercase; border: none; border-radius: 4px; cursor: pointer;}
+.newsletter input{padding: 15px; border: 1px solid var(--color5); border-radius: 4px; margin-right: 15px; flex: 1;}
+.newsletter button{padding: 15px; background-color: var(--color5); text-transform: uppercase; border: none; border-radius: 4px; cursor: pointer;}
+.newsletter button a{color: var(--color10);}
 @media(max-width: 700px){
     .newsletter input{flex-basis: 100%; margin-bottom: 15px;}
 }
 
 /*Footer*/
 
-footer{display: flex; flex-direction: column; background-color: rgb(4, 4, 54); padding: 50px 0px; align-items: center;}
+footer{display: flex; flex-direction: column; background-color: var(--color2); padding: 50px 0px; align-items: center;}
 footer ul{display: flex; margin-bottom: 25px;}
 footer ul li{margin-right: 10px;}
 footer ul :local-link:last-child{margin-right: 0px;}
-footer ul li a{color: rgb(28, 118, 208); font-size: 2rem;}
-footer p{color: rgb(28, 118, 208); text-align: center;}
+footer ul li a{color: var(--color5); font-size: 2rem;}
+footer p{color: var(--color5); text-align: center;}
