--- a/assets/login.css
+++ b/assets/login.css
@@ -1,12 +1,24 @@
+:root{
+    --color1: #0B090A;
+    --color2: #161A1D;
+    --color3: #660708;
+    --color4: #A4161A;
+    --color5: #BA181B;
+    --color6: #E5383B;
+    --color7: #B1A7A6;
+    --color8: #D3D3D3;
+    --color9: #F5F3F4;
+    --color10: #FFFFFF;
+}
 *{margin: 0px; padding: 0px; font-size: 100%;box-sizing: border-box; font-family: 'Open Sans' sans-serif;}
-body{background-color: rgb(28, 118, 208);}
+body{background-color: var(--color4);}
 .area-login{display: flex; height: 100vh; justify-content: center; align-items: center;}
-.area-login .login{background-color: rgb(4, 4, 54);width: 355px; height: 320px;padding: 35px; display: flex; flex-direction: column; align-items: center; border-radius: 10px;}
+.area-login .login{background-color: var(--color2);width: 355px; height: 320px;padding: 35px; display: flex; flex-direction: column; align-items: center; border-radius: 10px;}
 .area-login .login form{display: flex; flex-direction: column; width: 100%;}
-.area-login .login input{margin-top: 10px;background-color: rgb(25, 25, 98);color: #fff; border: none; height: 45px; outline: none; border-radius: 8px; padding-left: 10px;}
+.area-login .login input{margin-top: 10px;background-color: var(--color3);color: var(--color10); border: none; height: 45px; outline: none; border-radius: 8px; padding-left: 10px;}
 .area-login .login img{width: 65px;height: auto;}
 
-.area-login .login input::placeholder{color: #fff; font-size: 14px;}
+.area-login .login input::placeholder{color: var(--color10); font-size: 14px;}
 .area-login .login form[type="submit"]{
     display: block;
     background-color: rgb(28, 118, 208);
